conditions.Conditions.scala.code
if (estFaceMur() == false ) {
  avancer() ;
} else {
  reculer() ;
}